--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
   <header>
+    <div class="black-bar">
+      <ul>
+        <li><a href=""><img>English</a></li>
+        <li><a href=""><img>My page</a></li>
+        <li><a href=""><img>Log out</a></li>
+      </ul>
+    </div>
     <div class="nav-bar">
       <div class="burguer-button" id="open">
         <div></div>
@@ -19,15 +26,16 @@
         <div></div>
       </div>
       <a href="index.html"><img src="Capstone-img/logo-nfr.png" class="logo"></a>
-      <ul class="desk-ul">
-        <li><a href="index.html">About</a></li>
+        <ul class="desk-ul">
+        <li><a href="about.html">About</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="#events">Events</a></li>
         <li><a href="#contact">Join</a></li>
         <li><a href="#sponsor">Sponsor</a></li>
         <li><a href="#contact">News</a></li>
         <button class="soon">Soon!</button>
-      </ul>
+      </div>
+      
     </div>
 
     <!-----------------------------Mobile menu-------------------------------->
@@ -36,7 +44,7 @@
 
       <a class="close-button" id="close"><img src="Capstone-img/closebotton.png"></a>
       <ul class="mobile-ul">
-        <li><a href="index.html">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="#events">Events</a></li>
         <li><a href="#contact">Join</a></li>
@@ -107,6 +115,7 @@
           </li>
         </ul>
         <button class="tickets">Tickets here!</button>
+        <a href="" class="join">Join our comunity</a>
       </div>
     </section>
 
@@ -123,11 +132,9 @@
     <section class="sponsors" id="sponsor">
       <div class="sponsors-container">
         <h2>Sponsors</h2>
-        <div class="sponsor-line"></div>
+        <div class="red-line"></div>
         <ul class="sponsors-content">
-          <li><img src="Capstone-img/pendelton.png" alt=""></li>
           <li><img src="Capstone-img/purina.png" alt=""></li>
-          <li><img src="Capstone-img/purple.png" alt=""></li>
           <li><img src="Capstone-img/wrangler.png" alt=""></li>
           <li><img src="Capstone-img/ram.png" alt=""></li>
           <li><img src="Capstone-img/zoetis.png" alt=""></li>
@@ -136,7 +143,7 @@
     </section>
   
   </main>
-  
+  <!--------------------------Footer-------------------------->
   <footer>
     <div class="footer-content">
       <img src="Capstone-img/logo-nfr.png" class="img-footer">
