Add modified files to apply reviewer suggestions

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
   <!------------------------------------Home page---------------------------------->
   
-    <section  class="home-page">
+    <section  class="home-page" id="home-page-about">
       <div class="home-page-content">
         <p class="main-paragraph" id="main-paragraph-about">"Unforgettable moments in live rodeo and bull riding start right here"</p>
         <h1 id="h1-about">Wrangler National Finals Rodeo</h1>
