--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="home-page-content">
         <p class="main-paragraph">"Unforgettable moments in live rodeo and bull riding start right here"</p>
         <h1>Wrangler National Finals Rodeo</h1>
-        <p class="secundary-paragraf">The Wrangler NFR is the richest and most prestigious rodeo in the world and an event like no other, an extravaganza for fans to enjoy the roping and riding activity of today’s cowboys. It is the culmination of the rodeo season where the top 15 contestants in bareback riding, steer wrestling, team roping, saddle bronc riding, tie-down roping, barrel racing and bull riding compete to take home top honors and their share of a multi-million dollar purse.</p>
+        <p class="secundary-paragraf">The Wrangler NFR is the richest and most prestigious rodeo in the world and an event like no other, an extravaganza for fans to enjoy the roping and riding activity of today’s cowboys.</p>
         <p class="date">2023.12.09(SAT) - 16(SAT)</p>
       </div>
     </section>
@@ -89,14 +89,14 @@
             <div class="event-li">
               <img src="Capstone-img/blackboard.png">
               <p class="event">Barrel racing</p>
-              <p class="event-comment">A fast-paced rodeo event where riders navigate a cloverleaf pattern around barrels, aiming for the fastest time without knocking them down.</p>
+              <p class="event-comment">A fast-paced rodeo event where riders navigate a cloverleaf pattern around barrels.</p>
             </div>
           </li>
           <li>
             <div class="event-li">
               <img src="Capstone-img/mesagges.png">
               <p class="event">Tie down roping</p>
-              <p class="event-comment">A rodeo event where a cowboy on horseback ropes a calf and quickly dismounts to tie three of its legs together. The fastest time wins, emphasizing skill, speed, and precision.</p>
+              <p class="event-comment">A rodeo event where a cowboy on horseback ropes a calf and quickly dismounts to tie three of its legs together.</p>
             </div>
           </li>
           <li>
@@ -125,8 +125,9 @@
       <h2>Top Stanting</h2>
       <div class="red-line"></div>
       <div id="cowboys-container">
-        
+      
       </div>
+      <button class="more-button">MORE <img src="Capstone-img/arrow_down.png"></button>  
     </section>
     <!----------------------Sponsors---------------------->
     <section class="sponsors" id="sponsor">
